testsuite/bsc.typechecker/kind/DataDefFieldIsNum.bs
package DataDefFieldIsNum () where

data Foo = Bar 12

